--- a/configs/app.yaml
+++ b/configs/app.yaml
@@ -11,6 +11,10 @@ dataset:
     - construction
     - manipulation
     - regular
+  split:
+    train: 0.8
+    val: 0.1
+    test: 0.1
 
 train:
   epochs: 30
