--- a/configs/app.yaml
+++ b/configs/app.yaml
@@ -18,17 +18,17 @@ dataset:
     test: 0.1
 
 train:
-  epochs: 30
+  epochs: 50
   batch_size: 128
   num_workers: 8
   lr: 3e-4
-  weight_decay: 1e-4
+  weight_decay: 1e-2
   grad_clip: 1.0
-  log_interval: 50
+  log_interval: 200
 
   imbalance:
     enabled: true
-    method: "sampler"         # "weights" | "sampler" | "both"
+    method: "weights"         # "weights" | "sampler" | "both"
     power: 1.0
     min_count: 1
     max_weight: 20
